--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -9,6 +9,7 @@
     left: 0;
     position: fixed;
     background-color: $main-color;
+    box-shadow: $main-box-shadow;
     border-right: 3px solid rgb(255, 255, 255);
 
         .header-nav{
