--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,8 @@
 footer {
   width: 100vw;
   height: 100px;
-  background-color: rgb(56, 54, 58);
+  background-color: rgb(192, 192, 213);
+  box-shadow: 1px 1px 1px 1px rgba(177, 161, 161, 0.5019607843);
   padding: 22px 97px;
 }
 footer .footer-rights {
