--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,6 +4,7 @@ footer{
     width: 100vw;
     height: 100px;
     background-color: $main-color;
+    box-shadow: $main-box-shadow;
     padding: 22px 97px;
     // @include flex-col;
 
