--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,15 +25,27 @@ body {
 #main-container #home {
   height: 100vh;
   display: flex;
-  padding: 0px 0px 50px 30px;
+  padding: 120px 0px 150px 30px;
+  width: 100%;
+  justify-content: space-around;
+  background-color: rgb(230, 230, 230);
 }
 #main-container #home .home--title {
   font-size: 100px;
-  color: rgb(240, 156, 156);
+  color: rgb(192, 192, 213);
   font-weight: bold;
+  text-shadow: 0 1px 0 #777, 0 -1px 0 #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+#main-container #home .home--intro {
   display: flex;
   flex-direction: column;
   justify-content: end;
+  text-align: center;
+  font-size: 25px;
+  padding-bottom: 101px;
 }
 #main-container #introduce {
   display: flex;
