--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,13 +25,15 @@ body {
 #main-container #home {
   height: 100vh;
   display: flex;
-  padding: 120px 0px 150px 30px;
+  padding: 0px 0px 150px 30px;
   width: 100%;
   justify-content: space-around;
   background-color: rgb(230, 230, 230);
+  position: relative;
 }
 #main-container #home .home--title {
-  font-size: 100px;
+  font-size: 120px;
+  padding-top: 120px;
   color: rgb(192, 192, 213);
   font-weight: bold;
   text-shadow: 0 1px 0 #777, 0 -1px 0 #000;
@@ -46,6 +48,12 @@ body {
   text-align: center;
   font-size: 25px;
   padding-bottom: 101px;
+  color: rgb(151, 134, 158);
+}
+#main-container #home canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 #main-container #introduce {
   display: flex;
