--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,14 +23,16 @@
     // background-color: black;
     display: flex;
     //원래 padding값 padding: 0px 0px 50px 30px;
-    padding: 120px 0px 150px 30px;  
+    padding: 0px 0px 150px 30px;  
     // text-shadow: 0 1px 0 #777, 0 -1px 0 #000;
     width: 100%;
     justify-content: space-around;
     background-color: rgb(230, 230, 230);
-    
+    position: relative;
+
     .home--title{
-      font-size: 100px;
+      font-size: 120px;
+      padding-top: 120px;
       // color: rgb(240, 156, 156);
       color: rgb(192 192 213);
       font-weight: bold;
@@ -38,6 +40,20 @@
       display: flex;
       flex-direction: column;
       justify-content: start;
+
+      // div{
+      //   animation: fadeIn 0.2s 1s  linear ;
+        
+      // }
+
+      // @keyframes fadeIn {
+      //   from{
+      //     opacity: 0;
+      //   }
+      //   to{
+      //     opacity: 1;
+      //   }
+      // }
     }
 
     .home--intro{
@@ -47,8 +63,14 @@
       text-align: center;
       font-size: 25px;
       padding-bottom: 101px;
+      color: rgb(151, 134, 158);
       }
-  
+      canvas{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        // background-color: red; 
+      }
   }
  
 
