--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,6 +40,8 @@
       display: flex;
       flex-direction: column;
       justify-content: start;
+   
+      // opacity: 0;
 
       // div{
       //   animation: fadeIn 0.2s 1s  linear ;
