--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -73,6 +73,25 @@
         height: 100%;
         // background-color: red; 
       }
+
+      // span{
+      //   animation: 
+      //   typing 3.5s steps(40, end),
+      //   blink-caret .75s step-end infinite;
+      //   overflow: hidden;
+      // }
+
+      // /* The typing effect */
+      // @keyframes typing {
+      //   from { width: 0 }
+      //   to { width: 100% }
+      // }
+
+      // /* The typewriter cursor effect */
+      // @keyframes blink-caret {
+      //   from, to { border-color: transparent }
+      //   50% { border-color: orange; }
+      // }
   }
  
 
