--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -82,3 +82,8 @@ $contact-card-background-color: linear-gradient(45deg, #f3f5f0 50%, rgb(227, 227
         }
     }
 }
+
+
+.visible-none{
+    display: none;
+}
