--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .visible-none {
   display: none;
 }
@@ -51,7 +52,7 @@ body {
   justify-content: end;
   text-align: center;
   font-size: 25px;
-  padding-bottom: 101px;
+  padding-bottom: 90px;
   color: rgb(151, 134, 158);
 }
 #main-container #home .home--intro div {
@@ -339,5 +340,76 @@ body {
   }
   100% {
     transform: rotateY(-180deg);
+  }
+}
+/** 미디어 쿼리 **/
+@media (max-width: 1476px) {
+  #main-container #home {
+    flex-direction: column;
+    padding: 0px 0px 50px 30px;
+  }
+  #main-container #home .home--title {
+    font-size: 100px;
+    padding-top: 80px;
+    text-align: center;
+  }
+  #main-container #home .home--intro {
+    font-size: 20px;
+  }
+}
+@media (max-width: 1000px) {
+  #main-container {
+    margin-left: 0px;
+  }
+  #main-container #home {
+    justify-content: center;
+  }
+  #main-container #home .home--title {
+    font-size: 80px;
+    padding-bottom: 25px;
+  }
+  #main-container #home .home--intro h1 {
+    font-size: 40px;
+  }
+  #main-container #home .home--intro span {
+    font-size: 20px;
+  }
+}
+@media (max-width: 740px) {
+  #main-container {
+    margin-left: 0px;
+  }
+  #main-container #home .home--title {
+    font-size: 80px;
+  }
+  #main-container #home .home--intro h1 {
+    font-size: 30px;
+  }
+  #main-container #home .home--intro h2 {
+    font-size: 25px;
+  }
+  #main-container #home .home--intro span {
+    font-size: 20px;
+  }
+}
+@media (max-width: 450px) {
+  #main-container {
+    margin-left: 0px;
+  }
+  #main-container #home {
+    padding: 0px 5px 0px 5px;
+  }
+  #main-container #home .home--title {
+    font-size: 57px;
+    padding-top: 44px;
+  }
+  #main-container #home .home--intro h1 {
+    font-size: 28px;
+  }
+  #main-container #home .home--intro h2 {
+    font-size: 23px;
+  }
+  #main-container #home .home--intro span {
+    font-size: 19px;
   }
 }
