--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -119,3 +119,79 @@
 
 
 }
+
+
+
+/** 미디어 쿼리 **/
+
+@media (max-width:1000px) {
+
+    #header-container {
+        width: 100%;
+        height: 85px;
+        top: auto;
+        bottom: 0;
+        position: fixed;
+        z-index: 100;
+        border-top: 3px solid rgb(255, 255, 255);
+        justify-content: center;
+       .header-nav {
+            flex-direction: row;
+
+
+
+            div{
+                width: 80px;
+                height: 50px; 
+                // color: white;
+                margin: 16px 5px;
+                // display: flex;
+                // justify-content: center;
+
+               
+                a{
+                    // color: white;
+                    // position: relative;
+                    .icon{
+                        font-size: 50px
+                   }
+                }
+
+                // a:hover{
+                //     color: black;
+                //     transition-duration: 0.3s;
+                // }
+                a:hover::before{
+                    position: absolute;
+                    content: '';
+                    bottom: 60px;
+                    left: 0;
+                    width: 90%;
+                    border: 2px solid white;
+                    border-radius: 5px;
+                    background-color: transparent;
+                    padding: 5px 0px;
+                    color: white;
+                    z-index: 99;
+                    text-align: center;
+                    font-size: 12px;
+                    // line-height: -10px;
+                }
+                a:hover::after{
+                    content:'';
+                    top: 50px;
+                    left: 20px;
+
+                    border: 5px solid transparent;
+                    border-bottom: 5px solid white;
+                    z-index: 99;
+                    position: absolute;
+                }
+
+            }
+
+
+        }
+    }
+
+}
