--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,7 +64,7 @@
       justify-content: end;
       text-align: center;
       font-size: 25px;
-      padding-bottom: 101px;
+      padding-bottom: 90px;
       color: rgb(151, 134, 158);
 
         div{
@@ -502,3 +502,107 @@
 //   height: auto;
 //   max-height: none;
 // }
+
+
+
+
+/** 미디어 쿼리 **/
+
+@media (max-width: 1476px) {
+  #main-container{
+    #home{
+      flex-direction: column;
+      padding: 0px 0px 50px 30px;
+      .home--title{
+        font-size: 100px;
+        padding-top: 80px;
+        text-align: center;
+      }
+      .home--intro{
+        font-size: 20px;
+      }
+    }
+  }
+  
+}
+
+
+@media (max-width: 1000px) {
+  #main-container{
+    margin-left: 0px;
+    // footer height 값 찾아서 마진 주자!
+    #home{
+      justify-content: center;
+      .home--title{
+        font-size: 80px;
+        padding-bottom: 25px;
+        // padding-top: 44px;
+      }
+      .home--intro{
+        h1{
+          font-size: 40px;
+        }
+        span{
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 740px) {
+  #main-container{
+    margin-left: 0px;
+    // footer height 값 찾아서 마진 주자!
+    #home{
+      
+      .home--title{
+        font-size: 80px;
+      
+        // padding-top: 44px;
+      }
+      .home--intro{
+        h1{
+          font-size: 30px;
+        }
+        h2{
+          font-size: 25px;
+        }
+        span{
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  
+  #main-container{
+    margin-left: 0px;
+    // footer height 값 찾아서 마진 주자!
+    #home{
+      padding: 0px 5px 0px 5px;
+      .home--title{
+        font-size: 57px;
+        padding-top: 44px;
+      }
+      .home--intro{
+        h1{
+          font-size: 28px;
+        }
+        h2{
+          font-size: 23px;
+        }
+        span{
+          font-size: 19px;
+        }
+        
+      }
+    }
+   
+  }
+
+
+  
+}
