main : media query

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -17,3 +17,9 @@ footer .footer-rights {
 footer .footer-rights span {
   height: 100px;
 }
+
+@media (max-width: 1000px) {
+  footer {
+    margin-bottom: 80px;
+  }
+}
