--- a/src/scss/petBoard.scss
+++ b/src/scss/petBoard.scss
@@ -1,9 +1,9 @@
 @import '_variables';
 
 #project-component{
-    margin: 0px 50px 0px 150px;
     //    width: 100%;
     //    height: 100%;
+    
     h1{
         margin: 30px;
 
@@ -90,7 +90,7 @@
 
             span{
                 font-size: 25px;
-                color: $main-color-gray;
+                // color: $main-color-gray;
                 font-weight: bold;
                 // text-align: center;
             }
