--- a/src/css/petBoard.css
+++ b/src/css/petBoard.css
@@ -191,3 +191,114 @@
 #project-component .goGithub button:hover a {
   color: white;
 }
+
+@media (max-width: 1000px) {
+  #project-component h1 {
+    margin: 10px;
+    font-size: 30px;
+  }
+  #project-component p {
+    font-size: 18px;
+    margin: 0px 10px;
+    line-height: normal;
+  }
+  #project-component img {
+    width: 90%;
+    margin: 0px 2px;
+  }
+  #project-component .pet--modify {
+    grid-gap: 0px;
+  }
+}
+@media (max-width: 740px) {
+  #project-component img {
+    width: 90%;
+  }
+  #project-component .gray-color {
+    font-size: 18px;
+    margin: 6px 0px 6px 50px;
+  }
+  #project-component .pet--login {
+    display: block;
+  }
+  #project-component .pet--login div {
+    display: block;
+  }
+  #project-component .pet--register {
+    display: block;
+  }
+  #project-component .pet--homeQA {
+    display: block;
+  }
+  #project-component .pet--create div:first-child {
+    display: block;
+  }
+  #project-component .pet--create div:last-child {
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 10px;
+  }
+  #project-component .pet--create div:last-child p {
+    font-size: 18px;
+  }
+  #project-component .pet--create-comment div {
+    display: block;
+  }
+  #project-component .pet--detail-comment {
+    display: block;
+  }
+  #project-component .pet--modify {
+    display: block;
+  }
+  #project-component .pet--modify div {
+    margin-bottom: 15px;
+  }
+  #project-component .pet--modify span {
+    font-size: 18px;
+  }
+  #project-component .pet--delete div {
+    display: block;
+  }
+  #project-component .pet--menu div {
+    height: auto;
+    position: static;
+  }
+  #project-component .pet--menu div img {
+    width: 90%;
+  }
+  #project-component .pet--menu div img:nth-child(2) {
+    position: static;
+    width: 90%;
+  }
+  #project-component .pet--change div {
+    display: block;
+  }
+  #project-component .pet--myWrite div {
+    height: auto;
+    position: static;
+  }
+  #project-component .pet--myWrite div img {
+    width: 90%;
+  }
+  #project-component .pet--myWrite div img:nth-child(2) {
+    width: 90%;
+    position: static;
+  }
+}
+@media (max-width: 450px) {
+  #project-component h1 {
+    font-size: 20px;
+  }
+  #project-component .gray-color {
+    margin: 6px 19px;
+  }
+  #project-component .pet--register p {
+    margin-left: 0px;
+  }
+  #project-component .pet--create div:last-child p {
+    font-size: 16px;
+  }
+  #project-component .pet--detail-comment img {
+    width: 88%;
+  }
+}
