--- a/src/scss/commom.scss
+++ b/src/scss/commom.scss
@@ -1,7 +1,7 @@
 @import "_variables";
 
 #project-component{
-    // margin: 0px 50px 0px 150px;
+    margin: 0px 50px 0px 150px;
 }
 
 #pj-component{
@@ -16,7 +16,7 @@
         margin: 50px 3px 20px 0px;
         h1{
             margin: 10px 0px 13px 0px;
-            font-size:40px ;
+            font-size: 40px;
         }
         span{
             font-size: 23px;
@@ -39,33 +39,101 @@
     }
 }
 
+// media query
+//***********************--1000px--*********************************************//
 @media (max-width : 1000px) {
     #project-component{
-        margin: 0px 50px 0px 50px;
+        margin: 0px 20px ;
     }
 
     #pj-component{
-        // margin-bottom: 50px;
         .pj-component--title{
-            // display: flex;
-            // flex-direction: column;
-            // border: 1px solid $main-color;
-            // box-shadow: 3px 2px 0px 0px $main-color;
-            // border-radius: 10px;
-            // padding: 20px 50px;
-            // margin: 50px 3px 20px 0px;
             h1{
-                // margin: 10px 0px 13px 0px;
-                // font-size:40px ;
+                font-size:35px ;
             }
             span{
-                // font-size: 23px;
+                font-size: 20px;
             }
         }
+        .pj-component--skill{
+            div{
+                // display: flex;
+                // flex-direction: column;
+                // border-left: 8px solid $main-color;
+                // padding: 20px 15px;
+                margin-bottom: 0px;
+                // border-radius: 4px;
+            }
+            span{
+                font-size: 20px;
+            }
+        }
+    }
+}
 
+//***************************--740px--*****************************************//
 
+@media (max-width : 740px) {
+    #project-component{
+        margin: 0px 20px ;
     }
 
+    #pj-component{
+        margin-bottom: 0px;
+        .pj-component--title{
+            padding: 17px 35px;
+            h1{
+                font-size:30px ;
+            }
+            span{
+                font-size: 18px;
+            }
+        }
+        .pj-component--skill{
+            div{
+                // display: flex;
+                // flex-direction: column;
+                // border-left: 8px solid $main-color;
+                // padding: 20px 15px;
+                // margin-bottom: 30px;
+                // border-radius: 4px;
+            }
+            span{
+                font-size: 18px;
+            }
+        }
+    }
+}
 
+//********************************************************************//
+@media (max-width : 450px) {
+    #project-component{
+        margin: 0px 20px ;
+    }
 
+    #pj-component{
+        .pj-component--title{
+            padding: 15px 10px;
+            h1{
+                font-size:22px;
+                text-align: center;
+            }
+            span{
+                font-size: 15px;
+            }
+        }
+        .pj-component--skill{
+            div{
+                // display: flex;
+                // flex-direction: column;
+                // border-left: 8px solid $main-color;
+                // padding: 20px 15px;
+                // margin-bottom: 30px;
+                // border-radius: 4px;
+            }
+            span{
+                font-size: 15px;
+            }
+        }
+    }
 }
