nav : media query

--- a/src/css/headerNav.css
+++ b/src/css/headerNav.css
@@ -105,11 +105,11 @@
 @media (max-width: 1000px) {
   #header-container {
     width: 100%;
-    height: 85px;
+    height: 80px;
     top: auto;
     bottom: 0;
     position: fixed;
-    z-index: 100;
+    z-index: 1;
     border-top: 3px solid rgba(177, 161, 161, 0.5019607843);
     border-right: 0px;
     justify-content: center;
@@ -120,33 +120,22 @@
   #header-container .header-nav div {
     width: 80px;
     height: 50px;
-    margin: 16px 5px;
+    margin: 10px 5px;
   }
   #header-container .header-nav div a .icon {
     font-size: 50px;
   }
   #header-container .header-nav div a:hover::before {
-    position: absolute;
-    content: "";
-    bottom: 60px;
-    left: 0;
-    width: 90%;
-    border: 2px solid white;
-    border-radius: 5px;
-    background-color: transparent;
-    padding: 5px 0px;
-    color: white;
-    z-index: 99;
-    text-align: center;
-    font-size: 12px;
+    display: none;
   }
   #header-container .header-nav div a:hover::after {
-    content: "";
-    top: 50px;
-    left: 20px;
-    border: 5px solid transparent;
-    border-bottom: 5px solid white;
-    z-index: 99;
-    position: absolute;
+    display: none;
+  }
+  #header-container .return--projects {
+    position: static;
+    top: 0px;
+    left: 22px;
+    width: auto;
+    height: auto !important;
   }
 }
