--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -123,11 +123,11 @@
 
     #header-container {
         width: 100%;
-        height: 85px;
+        height: 80px;
         top: auto;
         bottom: 0;
         position: fixed;
-        z-index: 100;
+        z-index: 1;
         border-top: 3px solid #b1a1a180;
         border-right: 0px;
         justify-content: center;
@@ -140,7 +140,7 @@
                 width: 80px;
                 height: 50px; 
                 // color: white;
-                margin: 16px 5px;
+                margin: 10px 5px;
                 // display: flex;
                 // justify-content: center;
 
@@ -158,35 +158,25 @@
                 //     transition-duration: 0.3s;
                 // }
                 a:hover::before{
-                    position: absolute;
-                    content: '';
-                    bottom: 60px;
-                    left: 0;
-                    width: 90%;
-                    border: 2px solid white;
-                    border-radius: 5px;
-                    background-color: transparent;
-                    padding: 5px 0px;
-                    color: white;
-                    z-index: 99;
-                    text-align: center;
-                    font-size: 12px;
-                    // line-height: -10px;
+                    display: none;
                 }
                 a:hover::after{
-                    content:'';
-                    top: 50px;
-                    left: 20px;
-
-                    border: 5px solid transparent;
-                    border-bottom: 5px solid white;
-                    z-index: 99;
-                    position: absolute;
+                    display: none;
                 }
 
             }
 
 
+        }
+
+        .return--projects{
+          
+            position: static;
+            top: 0px;
+            left: 22px;
+            
+            width: auto;
+            height: auto !important;
         }
     }
 
