--- a/src/css/pageCommom.css
+++ b/src/css/pageCommom.css
@@ -1,3 +1,25 @@
 body {
   background-color: white;
 }
+
+p {
+  font-size: 20px;
+}
+
+span {
+  font-size: 20px;
+}
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 30px;
+  }
+  p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 450px) {
+  h1 {
+    font-size: 20px;
+  }
+}
