--- a/src/scss/pageCommom.scss
+++ b/src/scss/pageCommom.scss
@@ -2,3 +2,38 @@
 body{
     background-color: white;
 }
+
+h1{
+    // font-size: 25px;
+}
+
+p{
+    font-size: 20px;
+}
+
+span{
+    font-size: 20px;
+}
+// strong{
+//     color: black;
+// }
+
+@media (max-width: 1000px){
+    h1{
+        font-size: 30px;
+    }
+    p{
+        font-size: 18px;
+    }
+}
+@media (max-width: 740px){
+
+}
+@media (max-width: 450px){
+    h1{
+        font-size: 20px;
+    }
+    p{
+        // font-size: 18px;
+    }
+}
